--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
 }
 
 body {
+  background-color: black;
+  color: white;
   font-family: sans-serif;
   margin: 20px;
   padding: 0;
@@ -46,16 +48,6 @@ ul {
   padding-inline-start: 20px;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
-
 .square {
   background: #fff;
   border: 1px solid #999;
@@ -73,7 +65,7 @@ body {
 
 .board-row:after {
   clear: both;
-  content: '';
+  content: "";
   display: table;
 }
 
